2008-12-03  Robert Staudinger  <robsta@gnome.org>

	* ccss-gtk/Makefile.am:
	* ccss-gtk/ccss-gtk-grammar.c (ccss_gtk_grammar_create):
	* ccss-gtk/ccss-gtk-grammar.h:
	* ccss-gtk/ccss-gtk-style.c (ccss_gtk_style_serialize):
	* ccss-gtk/ccss-gtk-style.h:
	* ccss-gtk/ccss-gtk.c (ccss_gtk_init), (ccss_gtk_shutdown):
	* ccss-gtk/ccss-gtk.h:
	* ccss-gtk/ccss-gtk.sym:
	Skeleton implementation for gtk support, not in the build chain yet.

2008-12-02  Robert Staudinger  <robsta@gnome.org>

	* HACKING:
	* ccss-cairo/ccss-image.c (load_image):
	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/stylesheet.sgml:
	* ccss/ccss-grammar.c (ccss_grammar_create_stylesheet_from_buffer),
	(ccss_grammar_create_stylesheet_from_file):
	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.c (ccss_style_destroy):
	* ccss/ccss-stylesheet-priv.h:
	* ccss/ccss-stylesheet.c (ccss_stylesheet_create),
	(ccss_stylesheet_add_from_file), (ccss_stylesheet_destroy),
	(ccss_stylesheet_reference), (ccss_stylesheet_get_reference_count),
	(ccss_stylesheet_query_type), (ccss_stylesheet_query):
	* ccss/ccss-stylesheet.h:
	* ccss/ccss.sym:
	Reference counting for `ccss_stylesheet_t'.

2008-12-02  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/Makefile.am:
	* ccss/Makefile.am:
	* examples/Makefile.am:
	Move local includes and libs before global ones.

2008-12-01  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (bg_image_parse),
	(background_factory), (background_attachment_create),
	(background_image_create), (background_position_create),
	(background_repeat_create), (background_size_create):
	* ccss-cairo/ccss-border-image-parser.c (border_image_create):
	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_style_factory), (border_width_factory),
	(border_factory_impl), (border_factory), (border_left_factory),
	(border_top_factory), (border_right_factory),
	(border_bottom_factory), (border_radius_create),
	(border_radius_factory), (border_style_create),