@@ -2,7 +2,7 @@
 ACLOCAL_AMFLAGS = -I .
 DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --enable-werror
 
-DIST_SUBDIRS = ccss ccss-doc ccss-cairo ccss-cairo-doc examples
+DIST_SUBDIRS = ccss ccss-doc ccss-cairo ccss-cairo-doc ccss-gtk examples
 SUBDIRS = ccss ccss-doc
 
 pkgconfigdir = $(libdir)/pkgconfig
@@ -11,6 +11,11 @@ pkgconfig_DATA = libccss-1.pc
 if CCSS_WITH_CAIRO
 SUBDIRS += ccss-cairo ccss-cairo-doc
 pkgconfig_DATA += libccss-cairo-1.pc
+endif
+
+if CCSS_WITH_GTK
+SUBDIRS += ccss-gtk
+pkgconfig_DATA += libccss-gtk-1.pc
 endif
 
 if CCSS_WITH_EXAMPLES
@@ -27,5 +32,6 @@ EXTRA_DIST = \
 	TODO \
 	autogen.sh \
 	libccss-1.pc.in \
-	libccss-cairo-1.pc.in
+	libccss-cairo-1.pc.in \
+	libccss-gtk-1.pc.in
 
